@@ -6,6 +6,8 @@ Changelog
 * WIP :: Change: merged values from relatedProducts fiels to relatedItems
   field for EEAFigure and Data objects.
   [ghicaale refs #2790]
+* Bug fix: change rdfmarshaller modifiers to conform to API changes
+  [tiberich #3981]
 
 5.5 - (2012-10-04)
 ------------------
